Algorithms now show the explored path

--- a/SETTINGS.json
+++ b/SETTINGS.json
@@ -1,5 +1,5 @@
 {
     "windowSize": {"width":  1336, "height":  766},
     "margins":  {"xLOffset":  50, "xROffset":  50, "yTOffset":  150, "yBOffset":  50, "margin":  20},
-    "colors": {"-1": [0, 0, 0], "1":  [195, 225, 104], "2":  [255, 76, 48], "3":  [90, 34, 139], "4":  [108, 122, 137], "5":  [3, 138, 255], "6":  [255, 252, 127]}
+    "colors": {"-1": [0, 0, 0], "1":  [195, 225, 104], "2":  [255, 76, 48], "3":  [90, 34, 139], "4":  [108, 122, 137], "5":  [3, 138, 255, 80], "6":  [255, 252, 127]}
 }
